# pycon26

./: PyCon26_Intro_smolagents.ipynb  README.md  pyproject.toml
Comms/A2A/: agent_orchestrator.py  agent_server.py
Comms/A2A_MCP/: agent_server.py
Comms/MCP/: conference_mcp_server.py  pycon_data.json
